--- a/mysql/service.yaml
+++ b/mysql/service.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   selector:
     app:  myapp
-  ClusterIP: None 
+  type: ClusterIP 
   ports:
   - name:  mysql
     protocol: TCP
