--- a/mysql/config.yml
+++ b/mysql/config.yml
@@ -2,6 +2,6 @@ kind: ConfigMap
 apiVersion: v1
 metadata:
   name: mysql-config-map
-  namespace: mysql
+  namespace: demo
 data:
   MYSQL_DATABASE: devops
