--- a/mysql/secrets.yml
+++ b/mysql/secrets.yml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: mysql-secret
-  namespace: mysql
+  namespace: demo
 data:
   MYSQL_ROOT_PASSWORD: cm9vdAo= 
