--- a/k8/deployment.yml
+++ b/k8/deployment.yml
@@ -18,3 +18,10 @@ spec:
           image: gowdavaishu34/my-python-app:latest
           ports:
             - containerPort: 5000
+          resources:
+          requests:
+            cpu: 100m
+            memory: 128Mi
+          limits:
+            cpu: 200m
+            memory: 256Mi
